[package]
name = "rust-algorand"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
rand = "0.7.3"
sha2 = "0.9.8"
base32 = "0.4.0"
base64 = "0.13.0"
rmp-serde = "0.15.5"
lazy_static = "1.4.0"
serde_with = "1.11.0"
quick-error = "2.0.1"
serde_bytes = "0.11.5"
derive_more = "0.99.16"
ed25519-dalek = "1.0.1"
serde = { version = "1.0.130", features = [ "derive" ] }
